--- a/templates/nginx_app.conf.j2
+++ b/templates/nginx_app.conf.j2
@@ -16,7 +16,7 @@ server {
     {% endif %}
 
     {% if app_nginx_ssl_acme_well_known_config_file.stat.exists -%}
-    include {{ app_nginx_ssl_acme_well_known_config_file }};
+    include {{ app_nginx_ssl_acme_well_known_config_file.stat.path }};
     {% endif %}
 
     {% for path in app_nginx_static_paths %}
